--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    
+<!-- first section -->
 
     <section class="first-area">
         <div id="topnav">
@@ -34,6 +36,8 @@
         </div>
     </section>
 
+    <!-- second section -->
+
     <section id="news" class="second-area">
         <div class="half-page">
             <img src="images/Group33082.png" alt="">
@@ -46,7 +50,9 @@
         </div>
     </section>
 
-    <section class="my-experience" id="background-color">
+<!-- third section -->
+
+    <section class="my-experience" >
         <H2 > <span class="text-color">LATEST</span> WORKING PROJECT</H2>
         <div class="latest-project">
             <img src="images/image 4.png" alt="">
@@ -59,6 +65,8 @@
         </div>
     </section>
 
+    <!-- last section -->
+
     <section id="final-task">
         <div class="contact">
             <h1>WORK INQUIRY</h1>
@@ -66,10 +74,12 @@
         <div class="contact">
             <a class="button" href="">Let's chat</a>
         </div>
-            
+        <div class="contact">
+            <p>STAY CONNECTED</p>
+            <h2>
+                hello@design.com
+            </h2>
+        </div> 
     </section>
-
-
-
 </body>
 </html>
